@@ -1,4 +1,4 @@
 ; Miranda Version Info
 
 !define MIM_VERSION             "0.9.3"
-!define MIM_BETA                "1" ; 0 for final build
+!define MIM_BETA                "2" ; 0 for final build
